mysql mvn docker spring-boot example

--- a/docker-mysql-spring-boot/Dockerfile
+++ b/docker-mysql-spring-boot/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:8
-ADD target/users-mysql.jar users-mysql.jar
-EXPOSE 8086
-ENTRYPOINT ["java", "-jar", "users-mysql.jar"]
+FROM java:8
+VOLUME /opt
+WORKDIR "/opt"
+ADD target/spring-data-jpa-hibernate-example-0.0.1-SNAPSHOT.jar .
+ENTRYPOINT ["java","-jar","spring-data-jpa-hibernate-example-0.0.1-SNAPSHOT.jar"]
