--- a/docker-mysql-spring-boot/src/main/resources/application.properties
+++ b/docker-mysql-spring-boot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://104.197.181.87:3306/mysql?cloudSqlInstance=my-project-b8849:us-central1:mysql-cloud
+spring.datasource.url = jdbc:mysql://google/my_db?cloudSqlInstance=my-project-b8849:us-central1:mysql-cloud&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username = root
 spring.datasource.password = root
 
